--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="canteen.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="menu.html">Menu</a>
